After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762351 - codecparsers: h265: Fix initialization of slice_deblocking_filter_disabled_flag
codecparsers: h265: Fix initialization of slice_deblocking_filter_disabled_flag
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.7.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-19 22:56 UTC by Scott D Phillips
Modified: 2016-02-20 08:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] codecparsers: h265: Fix initialization of slice_deblocking_filter_disabled_flag (1.23 KB, patch)
2016-02-19 22:59 UTC, Scott D Phillips
committed Details | Review

Description Scott D Phillips 2016-02-19 22:56:10 UTC
Currently the slice_deblocking_filter_disabled_flag is inferred to be zero when not present, but the specification states that it should be inferred to the value of pps_deblocking_filter_disabled_flag when not present.
Comment 1 Scott D Phillips 2016-02-19 22:59:51 UTC
Created attachment 321702 [details] [review]
[PATCH] codecparsers: h265: Fix initialization of slice_deblocking_filter_disabled_flag
Comment 2 Sebastian Dröge (slomo) 2016-02-20 08:57:55 UTC
commit cf0d45c100d884e9717ab9b6b94dcdd3771f9ea3
Author: Scott D Phillips <scott.d.phillips@intel.com>
Date:   Fri Feb 19 14:27:59 2016 -0800

    codecparsers: h265: Fix initialization of slice_deblocking_filter_disabled_flag
    
    H.265 7.4.7.1 says:
    
    > When slice_deblocking_filter_disabled_flag is not present, it is
    > inferred to be equal to pps_deblocking_filter_disabled_flag.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762351